--- a/src/Css/Common.css
+++ b/src/Css/Common.css
@@ -4,7 +4,8 @@
 }
 
 body {
-    background-color: #1C2321;
+    width: 0;
+    height: 0;
 }
 
 
@@ -38,4 +39,6 @@ body {
     color: white;
     background-color: #6D8294;
 }
-  
+  .App{
+      z-index: 100;
+  }
