--- a/src/Css/AboutMe.css
+++ b/src/Css/AboutMe.css
@@ -2,7 +2,7 @@
     width: 100vw;
     height: 100vh;
     display: grid;
-    grid-template-rows: 0fr 0fr .3fr .7fr .5fr;
+    grid-template-rows: .01fr .01fr .5fr .5fr .5fr 10vh .01fr;
     grid-template-columns: 2fr 2.7fr 2fr;
     align-items: center;
     background-color: #1C2321;
@@ -11,13 +11,13 @@
 }
 .aboutMe {
     grid-column: 2/2;
+    grid-row: 3/3;
 }
 .experience{
     grid-column: 2/2;
+    grid-row: 4/4;
 }
 .references{
     grid-column: 2/2;
-}
-.navBar {
-    grid-column: 2/2;
+    grid-row: 5/5;
 }
