--- a/src/Css/Common.css
+++ b/src/Css/Common.css
@@ -11,18 +11,28 @@ body {
 
 .mainContent {
     grid-column: 2 / 2;
+    grid-row: 5/5;
 }
 
 .contact {}
 
 .header {
-    grid-column: 2 / 2;
+    color: #EEF1EF;
+    font-family: 'Gill Sans',
+        'Gill Sans MT',
+        Calibri,
+        'Trebuchet MS',
+        sans-serif;
+    grid-column: 1 / 1;
+    grid-row: 1/1;
+    position: fixed;
 }
 
 .footer {
     grid-column: 1 / span 3;
     background-color: #4B6169;
     text-align: center;
+    grid-row: 8/8;
 }
 
 .button {
@@ -39,6 +49,7 @@ body {
     color: white;
     background-color: #6D8294;
 }
-  .App{
-      z-index: 100;
-  }
+
+.App {
+    z-index: 100;
+}
