--- a/src/Css/MyProjects.css
+++ b/src/Css/MyProjects.css
@@ -1,9 +1,27 @@
-.MyProjects {
+.myProjects {
     height: 100%;
     width: 100%;
     margin: 0;
     padding: 0;
     position: fixed;
-    
+
     z-index: -100;
+}
+
+.myProjectsCore {
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 1fr 1fr 5fr 1fr;
+    grid-template-columns: 2fr 2.7fr 2fr;
+    align-items: center;
+    color: #EEF1EF;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    z-index: 100;
+}
+
+.cube {
+    font-size: 5px;
+    height: 100px;
+    width: 100px;
 }
